24 fix: remove vertical scroll on mobile devices

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -26,8 +26,8 @@
 
 @media screen and (max-width: 720px) {
     .button {
-        padding: 4px 4px;
-        font-size: 10px;
+        padding: 10px 8px;
+        font-size: 12px;
         min-width: 0;
         flex-grow: 1;
     }
