--- a/src/components/Controls/Controls.css
+++ b/src/components/Controls/Controls.css
@@ -17,6 +17,6 @@
         left: 0;
         border-top: 1px solid #fff;
         background: #181a1b;
-        padding: 15px;
+        padding: 30px 10px;
     }
 }
